--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
-
 {
-  "require": {
-    "silex/silex": "~1.1",
-  }
+    "description": "The Xiogop framework",
+    "name": "xiogop/framework",
+    "type": "project",
+    "license": "MIT",
+    "require": {
+        "leafo/lessphp": "0.4.0"
+    }
 }
