--- a/public/bower.json
+++ b/public/bower.json
@@ -1,27 +1,29 @@
 {
-    "name": "xiogoperus",
-    "version": "1.0.8",
-    "homepage": "https://github.com/xiogoperus",
-    "authors": [
-        "Xiogoperus"
-    ],
-    "description": "A free, open source, Bootstrap admin theme",
-    "keywords": [
-        "bootstrap",
-        "theme"
-    ],
-    "license": "Apache",
-    "dependencies": {
-        "bootstrap": "~3.3.6",
-        "datatables": "~1.10.4",
-        "datatables-plugins": "~1.0.1",
-        "flot": "~0.8.3",
-        "font-awesome": "~4.2.0",
-        "holderjs": "~2.4.1",
-        "metisMenu": "~1.1.3",
-        "morrisjs": "~0.5.1",
-        "datatables-responsive": "~1.0.3",
-        "bootstrap-social": "~4.8.0",
-        "flot.tooltip": "~0.8.4"
-    }
+  "name": "xiogoperus",
+  "version": "1.0.8",
+  "homepage": "https://github.com/xiogoperus",
+  "authors": [
+    "Xiogoperus"
+  ],
+  "description": "A free, open source, Bootstrap admin theme",
+  "keywords": [
+    "bootstrap",
+    "theme"
+  ],
+  "license": "Apache",
+  "dependencies": {
+    "bootstrap": "~3.3.6",
+    "datatables": "~1.10.4",
+    "datatables-plugins": "~1.0.1",
+    "flot": "~0.8.3",
+    "font-awesome": "~4.2.0",
+    "holderjs": "~2.4.1",
+    "metisMenu": "~1.1.3",
+    "morrisjs": "~0.5.1",
+    "datatables-responsive": "~1.0.3",
+    "bootstrap-social": "~4.8.0",
+    "flot.tooltip": "~0.8.4",
+    "materialize": "0.99.0",
+    "angular": "^1.7.2"
+  }
 }
